# xf86-video-tdfx

./: .gitignore  .gitlab-ci.yml  ChangeLog  README.md  autogen.sh  configure.ac
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
man/: Makefile.am  tdfx.man
src/: Makefile.am  compat-api.h  tdfx.h  tdfx_accel.c  tdfx_dga.c  tdfx_dri.c  tdfx_dri.h  tdfx_dripriv.h  tdfx_driver.c  tdfx_hwcurs.c  tdfx_io.c  tdfx_priv.c  tdfx_priv.h  tdfx_sli.c  tdfx_video.c  tdfxdefs.h
